--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -13,13 +13,13 @@ Content switchers have two main states: `selected` and `unselected`. By default,
 content switcher buttons are unselected with the selected state using a high
 contrast color.
 
-| Class                       | Property         | Color token   |
-| --------------------------- | ---------------- | ------------- |
-| `.bx--content-switcher-btn` | background-color | `$ui-01`      |
-| `.bx--content-switcher-btn` | text color       | `$text-02`    |
-| `--selected`                | background-color | `$ui-05`      |
-| `--selected`                | text color       | `$inverse-01` |
-| `:after`                    | divider          | `$ui-03`      |
+| Class                       | Property         | Color token      |
+| --------------------------- | ---------------- | ---------------- |
+| `.bx--content-switcher-btn` | background-color | `$ui-background` |
+| `.bx--content-switcher-btn` | text color       | `$text-02`       |
+| `--selected`                | background-color | `$ui-05`         |
+| `--selected`                | text color       | `$inverse-01`    |
+| `:after`                    | divider          | `$ui-03`         |
 
 ### Interactive states
 
