docs(dataviz): add histogram

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -130,7 +130,7 @@ appropriate chart type.
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Histogram"
-	disabled
+	href="/data-visualization/simple-charts#histogram"
     >
 
 ![GATSBY_EMPTY_ALT](images/histogram.svg)
