--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -22,6 +22,7 @@ harmony through our User Interface design.
 
 <AnchorLink>Introduction</AnchorLink>
 <AnchorLink>Color anatomy</AnchorLink>
+<AnchorLink>Implementing color</AnchorLink>
 <AnchorLink>Themes</AnchorLink>
 <AnchorLink>Tokens</AnchorLink>
 <AnchorLink>Interaction states</AnchorLink>
@@ -49,18 +50,6 @@ library in the context of dark and light themes.
 ![UI color alternatives](images/introduction.jpeg)
 
 </GifPlayer>
-
-### Applying color
-
-Carbon uses tokens and themes to manage color. Tokens are role-based, and themes
-specify the color values that serve those roles in the UI.
-
-| Term  | Definition                                                                                                                                                                                             |     |
-| ----- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --- |
-| Theme | A theme is a collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
-| Token | A token is the role-based identifier that assigns a color. Unlike hex codes, tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.                        |     |
-| Role  | A role is the systematic usage of a color. Roles cannot be changed between themes.                                                                                                                     |     |
-| Value | A value is the unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ## Color anatomy
 
@@ -118,6 +107,18 @@ The layering model differs between the _light_ and _dark_ themes.
 </Caption>
 
 <br />
+
+## Implementing color
+
+Carbon uses themes and tokens to manage color. Tokens are role-based, and themes
+specify the color values that serve those roles in the UI.
+
+| Term  | Definition                                                                                                                                                                                             |     |
+| ----- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --- |
+| Theme | A theme is a collection of colors designed to create a specific aesthetic. Themes control the color value assigned to a token. For example, White theme, Gray 10 theme, Gray 90 theme, Gray 100 theme. |     |
+| Token | A token is the role-based identifier that assigns a color. Unlike hex codes, tokens apply universally across themes. For example, `$layer`, `$border-subtle`, `$support-error`.                        |     |
+| Role  | A role is the systematic usage of a color. Roles cannot be changed between themes.                                                                                                                     |     |
+| Value | A value is the unique visual attribute (hex code, rgba value) assigned to a token through the use of a theme.                                                                                          |
 
 ## Themes
 
