--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -306,7 +306,7 @@ like a dark UI Shell Header with a light theme page.
 
 <br />
 
-### Tokens
+## Tokens
 
 Color in Carbon is managed through tokens. Tokens are an abstracted method of
 applying color in a consistent, reusable, and scalable way. Tokens are used in
@@ -406,7 +406,7 @@ applied in the components themselves, visit the component’s style page.
 - [Tag](/components/tag/style#color)
 - [Notification](/components/notification/style#color)
 
-### Interaction states
+## Interaction states
 
 In addition to the core set of enabled-state tokens, there are five other
 primary interaction states defined with tokens for each theme. Interaction
