docs: add new medium article to v11 page

--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -60,6 +60,18 @@ brand-driven product redesigns.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="Carbon v11 Beta 1"
+    author="Josh Black"
+    date="August 6, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-1-33488b0280f0"
+    >
+
+![Carbon v11 Beta 1](images/carbon_2021-beta-1.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="Carbon’s 2021 release: April update"
     author="Josh Black"
     date="April 22, 2021"
